deployment-svc-ingress.yaml
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gm-apps2
  name: deployment-gm-gui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gm-gui
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gm-gui
    spec:
      imagePullSecrets:
        - name: privateregcred 
      containers:
        - image: 10.210.179.228:8090/poc-docker-repo/ui:50
          imagePullPolicy: Always
          name: gm-gui
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: gm-apps2
  name: service-gm-gui
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: gm-gui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gm-apps2
  name: ingress-gm-gui
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: gm-alb-group
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /gui
            pathType: Prefix
            backend:
              service:
                name: service-gm-gui
                port:
                  number: 80
